--- a/07 Usepopcorn/src/index.css
+++ b/07 Usepopcorn/src/index.css
@@ -58,12 +58,32 @@ body {
   position: relative;
 }
 
-.loader {
+/* .loader {
   text-align: center;
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: 600;
   margin: 4.8rem;
+} */
+
+.loader {
+  margin: auto;
+  margin-top: 50%;
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid var(--color-primary);
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .error {
