--- a/10 React quizz/src/index.css
+++ b/10 React quizz/src/index.css
@@ -100,20 +100,29 @@ h4 {
 }
 
 progress {
-  -webkit-appearance: none;
   width: 100%;
   height: 12px;
   grid-column: 1 / -1;
 }
 
-::-webkit-progress-bar {
+.size {
+  height: 16px;
+  background-color: var(--color-medium);
+  border: 20px;
+  border-radius: 20px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+/* progress-inner {
   background-color: var(--color-medium);
   border-radius: 100px;
 }
-::-webkit-progress-value {
+progress-value {
   background-color: var(--color-theme);
   border-radius: 100px;
-}
+} */
 
 .btn {
   display: block;
