--- a/11 Worldwise/src/components/CityItem.module.css
+++ b/11 Worldwise/src/components/CityItem.module.css
@@ -4,6 +4,7 @@
   display: flex;
   gap: 1.6rem;
   align-items: center;
+  justify-content: space-between;
 
   background-color: var(--color-dark--2);
   border-radius: 7px;
@@ -33,6 +34,7 @@
 
 .date {
   font-size: 1.5rem;
+  margin-left: auto;
 }
 
 .deleteBtn {
